244Initials/force-app/main/default/objects/vlocity_cmt__VlocityErrorLogEntry__c/vlocity_cmt__VlocityErrorLogEntry__c.object-meta.xml
<CustomObject>
    <description>Populated after an error in an integration procedure via a data raptor bundle.  Can be a callout error, upsert error, etc.</description>
    <label>Vlocity Error Log Entry</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Vlocity Error Log Entries</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>