244Initials/force-app/main/default/objects/vlocity_cmt__VlocityErrorLogEntry__c/fields/Limit_Information__c.field-meta.xml
<CustomField>
    <fullName>Limit_Information__c</fullName>
    <label>Limit Information</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>