244Initials/force-app/main/default/objects/vlocity_cmt__VlocityErrorLogEntry__c/fields/LineNumber__c.field-meta.xml
<CustomField>
    <fullName>LineNumber__c</fullName>
    <label>LineNumber</label>
    <precision>5</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>