244Initials/force-app/main/default/objects/vlocity_cmt__VlocityErrorLogEntry__c/fields/Log_Level__c.field-meta.xml
<CustomField>
    <fullName>Log_Level__c</fullName>
    <label>Log Level</label>
    <length>50</length>
    <type>Text</type>
</CustomField>