244Initials/force-app/main/default/objects/vlocity_cmt__VlocityErrorLogEntry__c/listViews/vlocity_cmt__All.listView-meta.xml
<ListView>
    <fullName>vlocity_cmt__All</fullName>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>